--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -967,6 +967,7 @@
                         <segue destination="er9-gp-dhO" kind="relationship" relationship="viewControllers" id="m5q-7I-F0w"/>
                         <segue destination="vnt-hg-dzm" kind="relationship" relationship="viewControllers" id="x7z-q6-6h1"/>
                         <segue destination="AJh-0J-KwN" kind="relationship" relationship="viewControllers" id="Dcn-nl-eEd"/>
+                        <segue destination="r4i-3L-pUg" kind="relationship" relationship="viewControllers" id="URe-ps-m9m"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ag1-cp-TlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1106,7 +1107,7 @@
         <scene sceneID="cCG-wt-JkB">
             <objects>
                 <navigationController storyboardIdentifier="rankNav" automaticallyAdjustsScrollViewInsets="NO" id="er9-gp-dhO" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="순위" image="tab_community" id="Za7-Y5-r65"/>
+                    <tabBarItem key="tabBarItem" title="순위" image="tab_ranking" id="Za7-Y5-r65"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BsG-Zj-dPR">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1131,11 +1132,11 @@
             </objects>
             <point key="canvasLocation" x="-108" y="1569"/>
         </scene>
-        <!--Item-->
+        <!--컨텐츠-->
         <scene sceneID="6JN-1B-eWQ">
             <objects>
                 <navigationController storyboardIdentifier="contentNav" id="r4i-3L-pUg" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="vzV-et-tOf"/>
+                    <tabBarItem key="tabBarItem" title="컨텐츠" image="tab_content" id="vzV-et-tOf"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tzd-Ji-o91">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1483,6 +1484,8 @@
         <image name="ranking_hate" width="32" height="32"/>
         <image name="ranking_like" width="32" height="32"/>
         <image name="tab_community" width="23" height="23"/>
+        <image name="tab_content" width="23" height="23"/>
         <image name="tab_list" width="23" height="23"/>
+        <image name="tab_ranking" width="23" height="23"/>
     </resources>
 </document>
